--- a/package.json
+++ b/package.json
@@ -9,14 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "authen-client": "^0.1.2",
+    "axios": "^1.7.7",
+    "axios-core": "^1.0.0",
+    "cookie-core": "^0.0.4",
+    "csvtojson": "^2.0.10",
+    "js-base64": "^3.7.7",
+    "locale-service": "^0.1.0",
     "next": "14.2.15",
+    "next-hook-core": "^0.2.1",
+    "onecore": "^0.1.3",
+    "password-client": "^0.1.3",
+    "phonecodes": "^0.0.2",
+    "query-string": "7.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
+    "react-modal": "^3.16.1",
+    "reactx-groups": "^0.0.1",
+    "reactx-navigator": "^0.0.1",
+    "reactx-paging": "^0.0.1",
+    "signup-client": "^0.1.3",
+    "ui-alert": "^0.1.2",
+    "ui-loading": "^0.0.5",
+    "ui-plus": "^0.2.6",
+    "ui-toast": "^0.0.5",
+    "uione": "^0.2.5",
+    "validation-core": "^1.0.0",
+    "web-clients": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "typescript": "^5"
